Bug 101254 - Arrowheads in sidebar are disabled, although object can carry arrowheads.
Summary: Arrowheads in sidebar are disabled, although object can carry arrowheads.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:6.2.0 target:6.1.1
Keywords: bibisected, bisected, regression
: 116855 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-08-01 22:50 UTC by Regina Henschel
Modified: 2018-08-15 09:58 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
File with a not closed line as custom shape (11.48 KB, application/vnd.sun.xml.impress)
2016-08-01 22:50 UTC, Regina Henschel
Details
Bibisect log (2.87 KB, text/plain)
2018-04-07 16:28 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2016-08-01 22:50:25 UTC
Created attachment 126513 [details]
File with a not closed line as custom shape

Open attached file. It contains a custom-shape with a line.
Select the shape and go to the line properties in the side bar.
Notice, that you can change the kind of the stroke, but that the two drop-down lists are disabled.

Now open the context menu of the shape and select item 'Line'. Set the line-ends in that dialog. Notice that the line on the shape gets the selected line-ends. Save and reopen the file to make sure, that the property is correctly saved to file.

I have used Version: 5.3.0.0.alpha0+
Build ID: 4a6329badc9c8679945d1a1ec225e26e15d7bfd2
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2016-07-30_10:25:39
Locale: de-DE (de_DE); Calc: group
Comment 1 Julien Nabet 2016-08-02 19:35:37 UTC
On pc Debian x86-64 with master sources updated yesterday, I could reproduce this.

A codepointer:
http://opengrok.libreoffice.org/xref/core/svx/source/sidebar/line/LinePropertyPanelBase.cxx#915
but "disableArrowHead" call depends on context stuff that I don't understand.
In brief, it's just a starting point.
Comment 2 QA Administrators 2017-09-01 11:20:57 UTC Comment hidden (obsolete)
Comment 3 Regina Henschel 2017-09-01 16:13:43 UTC
The problem still exists in Version: 6.0.0.0.alpha0+
Build ID: 4c99b8a9de59f3c5280ff2944d9f828822897f4a
CPU threads: 4; OS: Windows 6.1; UI render: default; 
Locale: de-DE (de_DE); Calc: group

You can use the "Line" item from context menu, but the fields in the sitebar are disabled.
Comment 4 Regina Henschel 2018-04-07 08:15:08 UTC
*** Bug 116855 has been marked as a duplicate of this bug. ***
Comment 5 Telesto 2018-04-07 16:28:11 UTC
Created attachment 141191 [details]
Bibisect log

The "Arrow Style, Corner Style and Cap Style" where hidden for a while..

--> The blackout started with (it was working before) 31c7ac9f3bb171a85cbf0d2f5c506de765ebcd66 is the first bad commit
commit 31c7ac9f3bb171a85cbf0d2f5c506de765ebcd66
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Thu Feb 4 17:25:29 2016 -0800

--> Arrow dialog reappeared but disabled
author	Rishabh Kumar <kris.kr296@gmail.com>	2016-05-25 17:19:56 +0530
committer	Katarina Behrens <Katarina.Behrens@cib.de>	2016-05-25 16:42:54 +0000
commit f131e6ef72bcb778bef11a497777bef099d9c4d9 (patch)
tree 987a014c979309ce4f563274f2eb2a36e3038f75
parent 80502737b2ac722d4adfd4e89d3dc46799ded97e (diff)
Disable line arrow heads when a shape is selected

https://cgit.freedesktop.org/libreoffice/core/commit/?id=f131e6ef72bcb778bef11a497777bef099d9c4d9

Commit f131e6ef72bcb778bef11a497777bef099d9c4d9 is might be the cause in some sense. My non-DEV guess: "mbArrowSupported"  isn't set for custom shapes...?
Comment 6 Xisco Faulí 2018-08-08 16:00:04 UTC
The got disabled in

https://cgit.freedesktop.org/libreoffice/core/commit/?id=eede66cd922b0f867b7521a9d96e2c6f42a973dc

author	Rishabh <kris.kr296@yahoo.in>	2016-01-24 07:07:07 +0530
committer	jan iversen <jani@documentfoundation.org>	2016-01-25 07:14:34 +0000
commit eede66cd922b0f867b7521a9d96e2c6f42a973dc (patch)
tree 5158307abe928b19ca3d77446ebbb1479b5542fc
parent 45e3e87ddcdfb14186ce6a9d8748fa4b31393600 (diff)
tdf#84381: Disable the line arrowheads when non-line object is selected
When a non-line object is selected, the arrow subsection of line tab is hidden

Bisected with: bibisect-linux-64-5.2
Comment 7 Xisco Faulí 2018-08-08 16:07:01 UTC
Removing mbArrowSupported from https://opengrok.libreoffice.org/xref/core/svx/source/sidebar/line/LinePropertyPanelBase.cxx#901 fixes the issue, so I guess mbArrowSupported is set incorrectly here...
Comment 8 Xisco Faulí 2018-08-08 17:10:23 UTC
Patch in gerrit: https://gerrit.libreoffice.org/#/c/58747/
Comment 9 Commit Notification 2018-08-09 08:58:16 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ffc61735fe804913e55db45ae4d533c8980c2e6a

tdf#101254: Enable arrowheads in sidebar for draws

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2018-08-15 09:58:53 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=24e3426546718a9df1c0066b1f955b1d0fe4d4ea&h=libreoffice-6-1

tdf#101254: Enable arrowheads in sidebar for draws

It will be available in 6.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.