tdf#101254: Enable arrowheads in sidebar for draws

It's enabled in Line and Filling toolbar so do the same
in the sidebar

Change-Id: Icc64705268a9efb46ab463131ddf486dad12f085
Reviewed-on: https://gerrit.libreoffice.org/58747
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Jenkins
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>
(cherry picked from commit ffc61735fe804913e55db45ae4d533c8980c2e6a)
Reviewed-on: https://gerrit.libreoffice.org/58754